--- a/package.json
+++ b/package.json
@@ -2,34 +2,36 @@
   "name": "taskpro-frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://thelastjs.github.io/taskpro-frontend/",
+  "homepage": "https://thelastjs.github.io/taskpro-frontend",
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/material": "^7.1.0",
-    "@mui/styled-engine-sc": "^7.1.0",
-    "@reduxjs/toolkit": "^2.8.1",
-    "axios": "^1.9.0",
-    "clsx": "^2.1.1",
-    "formik": "^2.4.6",
-    "modern-normalize": "^3.0.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.10",
+    "@mui/styled-engine-sc": "^6.0.0",
+    "@reduxjs/toolkit": "^2.1.0",
+    "axios": "^1.6.7",
+    "clsx": "^2.1.0",
+    "formik": "^2.4.5",
+    "modern-normalize": "^2.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-password-strength-bar": "^0.4.1",
-    "react-redux": "^9.2.0",
-    "react-router-dom": "^7.6.0",
+    "react-pro-sidebar": "^1.1.0",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
-    "styled-components": "^6.1.18",
+    "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4",
-    "yup": "^1.6.1"
+    "yup": "^1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
@@ -51,6 +53,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0"
+    "gh-pages": "^6.1.1"
   }
 }
