--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "private": true,
   "homepage": "https://thelastjs.github.io/taskpro-frontend/",
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.0",
-    "@mui/material": "^5.15.14",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^5.0.0",
+    "@mui/material": "^5.0.0",
     "@mui/styled-engine-sc": "^7.1.0",
     "@reduxjs/toolkit": "^2.8.1",
     "axios": "^1.9.0",
@@ -23,12 +21,11 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.18",
     "web-vitals": "^2.1.4",
-    "yup": "^1.6.1",
-    "@mui/material": "^5.0.0",
-    "@mui/icons-material": "^5.0.0"
+    "yup": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
