--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^5.0.0",
-    "@mui/material": "^5.0.0",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
     "@mui/styled-engine-sc": "^7.1.0",
+    "@mui/system": "^7.1.0",
+    "@mui/x-date-pickers": "^8.4.0",
     "@reduxjs/toolkit": "^2.8.1",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "modern-normalize": "^3.0.1",
     "react": "^19.1.0",
