--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "homepage": "https://thelastjs.github.io/taskpro-frontend/",
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.0",
